src/styles.css
@import url(
  "https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
);

:root {
  --clr-fg: #000000;

  --clr-primary-0: #33a5e4;
  --clr-primary-10: #3191c8;
  --clr-primary-20: #2f7eac;
  --clr-primary-30: #2c6b92;
  --clr-primary-40: #285978;
  --clr-primary-50: #23475f;

  --clr-surface-0: #eef6fc;
  --clr-surface-10: #e1e8ed;
  --clr-surface-20: #d5dbdf;
  --clr-surface-30: #c8cdd1;
  --clr-surface-40: #bcc0c3;
  --clr-surface-50: #afb3b5;

  --font-size-xs: 0.694rem;
  --font-size-sm: 0.833rem;
  --font-size-md: 1rem;
  --font-size-lg: 1.2rem;
  --font-size-xl: 1.44rem;
  --font-size-2xl: 1.728rem;
  --font-size-3xl: 2.074rem;
  --font-size-4xl: 2.488rem;

  --icon-sm: 0.75rem;
  --icon-md: 1.5rem;
  --icon-lg: 2rem;

  --space-xxs: 0.125rem;
  --space-xs: 0.25rem;
  --space-sm: 0.5rem;
  --space-md: 1rem;

  --border-radius-sm: 0.5rem;

  --input-scheme: light;
}

[data-theme="dark"] {
  --clr-fg: #ffffff;

  --clr-primary-10: #57afe7;
  --clr-primary-20: #72b8ea;
  --clr-primary-30: #89c2ed;
  --clr-primary-40: #9fccf0;
  --clr-primary-50: #b3d6f3;
  
  --clr-surface-0: #191f24;
  --clr-surface-10: #2e3438;
  --clr-surface-20: #454a4e;
  --clr-surface-30: #5d6165;
  --clr-surface-40: #76797d;
  --clr-surface-50: #8f9395;

  --input-scheme: dark;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.icon { flex-shrink: 0; }

.icon--sm { width: var(--icon-sm); }
.icon--md { width: var(--icon-md); }
.icon--lg { width: var(--icon-lg); }

.text-md { font-size: var(--font-size-md); }
.text-lg { font-size: var(--font-size-lg); }
.text-bold { font-weight: bold; }

.text-fg {
  color: var(--clr-fg);
  transition: color 0.4s ease;
}

.fill-fg {
  fill: var(--clr-fg);
  transition: fill 0.4s ease;
}

.hidden { display: none !important; }

.separator {
  margin: var(--space-sm);
  border-bottom: 1px solid var(--clr-surface-30);
  transition: border-color 0.4s ease;
}

.surface-interactive {
  cursor: pointer;
  border: none;
  border-radius: var(--border-radius-sm);
  background-color: transparent;
  transition: background-color 0.2s ease;
}

.surface-interactive:hover {
  background-color: var(--clr-surface-20);
}

body {
  display: flex;
  font-family: "Inter", serif;
}

.center-icon { display: block; }

a { 
  text-decoration: none;
}

.add-task-dialog {
  position: fixed;
  top: 20%;
  left: 50%;
  translate: -50% -50%;
  width: 40rem;
  border: 1px solid var(--clr-surface-50);
  border-radius: var(--border-radius-sm);
  background-color: var(--clr-surface-10);
  padding: var(--space-md);
  transition: border-color 0.4s ease, background-color 0.4s ease;
}

.add-task-dialog__form {
  display: flex;
  flex-direction: column;
  gap: var(--space-sm);
}

.add-task-dialog__form input[type="text"] {
  border: none;
  outline: none;
  color: var(--clr-fg);
  background-color: var(--clr-surface-10);
  transition: color 0.4s ease, background-color 0.4s ease;
}

.add-task-dialog__title-input {
  font-size: var(--font-size-lg);
  font-weight: bold;
}

.add-task-dialog__description-input {
  font-size: var(--font-size-md);
}

.add-task-dialog__select-group {
  display: flex;
  gap: var(--space-sm);
  max-width: 70%;
}

.add-task-dialog__select-group > * {
  flex: 1;
}

.add-task-dialog__date-input,
.add-task-dialog__priority-select,
.add-task-dialog__project-select {
  color: var(--clr-fg);
  border: 1px solid var(--clr-surface-50);
  background-color: var(--clr-surface-10);
  color-scheme: var(--input-scheme);
  padding: var(--space-sm);
  transition: color 0.4s ease, border-color 0.4s ease, background-color 0.4s ease;
}

.add-task-dialog__bottom {
  display: flex;
  justify-content: space-between;
  gap: var(--space-md);
}

.add-task-dialog__project-select {
  flex: 3;
}

.add-task-dialog__button-group {
  display: flex;
  flex: 2;
  gap: var(--space-sm);
}

.add-task-dialog__button-group button {
  flex: 1;
  font-family: inherit;
  font-size: var(--font-size-md);
  cursor: pointer;
  padding: var(--space-xs) var(--space-md);
  border-radius: var(--border-radius-sm);
  transition: color 0.4s ease, border-color 0.4s ease, background-color 0.4s ease;
}

.add-task-dialog__cancel-btn {
  color: var(--clr-fg);
  border: 1px solid var(--clr-surface-50);
  background-color: var(--clr-surface-0);
}

.add-task-dialog__submit-btn {
  color: black;
  border: 1px solid var(--clr-primary-20);
  background-color: var(--clr-primary-20);
}

.sidebar {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: clamp(220px, 20vw, 320px);
  padding: var(--space-sm);
  background-color: var(--clr-surface-10);
  transition: background-color 0.4s ease;
}

.sidebar:hover .sidebar__toggle-projects-btn {
  display: inline;
}

.sidebar__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: var(--space-sm)
}

.sidebar__title {
  font-size: var(--font-size-4xl);
  font-weight: bold;
  color: var(--clr-primary-0);
}

.sidebar__toggle-btn {
  padding: var(--space-xs) var(--space-xxs);
}

.sidebar__row {
  display: flex;
  align-items: center;
  gap: var(--space-sm);
  padding: var(--space-sm);
  width: 100%;
}

.sidebar__row--projects {
  padding: 0;
}

.sidebar__row--projects:hover .sidebar__add-project-btn {
  display: inline;
}

.sidebar__project-navigation {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  flex: 1;
}

.sidebar__projects-link {
  flex: 1;
  text-align: left;
  padding: var(--space-sm);
}

.sidebar__project-controls {
  display: flex;
  align-items: center;
}

.sidebar__project-controls button {
  display: none;
  padding: var(--space-xxs);
}

.sidebar__project-controls button:hover {
  background-color: var(--clr-surface-30);
}

.sidebar__toggle-projects-btn svg {
  transition: transform 0.2s ease, fill 0.4s ease;
}

.sidebar__toggle-projects-btn svg.rotate {
  transform: rotate(-90deg);
}

.sidebar__project-list-wrapper {
  overflow: hidden;
  height: 0;
}

.sidebar__project-list-wrapper.animate-height {
  transition: height 0.2s ease !important;
}

.sidebar__project-list {
  overflow-y: auto;
  scrollbar-width: thin;
  max-height: 100%;
}

.sidebar__project-list.disable-scroll {
  overflow: hidden !important;
}

.sidebar__project-name {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.project-editor {
  position: relative;
}

.project-editor__form {
  display: flex;
  gap: var(--space-xs);
}

.project-editor__edit-color-btn {
  display: flex;
  gap: var(--space-xs);
  padding: var(--space-sm);
}

.project-editor__name-input {
  font-size: inherit;
  width: 100%;
  padding: var(--space-xs) var(--space-sm);
  outline: none;
  color: var(--clr-fg);
  border: 1px solid var(--clr-surface-30);
  background-color: var(--clr-surface-10);
  border-radius: var(--border-radius-sm);
}

.project-editor__name-input:focus {
  border: 1px solid var(--clr-surface-50);
}

.project-editor__color-popover {
  position: absolute;
  top: 100%;
  left: 10%;
  display: grid;
  grid-template-columns: repeat(5, auto);
  gap: var(--space-sm);
  width: fit-content;
  padding: var(--space-sm);
  border-radius: var(--border-radius-sm);
  background-color: var(--clr-surface-30);
}

.project-editor__color-popover.above {
  top: auto;
  bottom: 100%;
}

.project-editor__color-swatch-btn {
  width: var(--icon-md);
  height: var(--icon-md);
  border: none;
  border-radius: 50%;
  background: var(--color);
  cursor: pointer;
}

.sidebar__theme-toggle-btn {
  width: fit-content;
  padding: var(--space-xs);
}

main {
  display: flex;
  justify-content: center;
  flex: 1;
  background-color: var(--clr-surface-0);
  transition: background-color 0.4s ease;
}

